# prefix-stub

./: CMakeLists.txt  app.manifest  prefix-stub-config.cmake.in  prefix-stub.pc.in  relocate.c  relocate.cpp
prefix-stub/: relocate.h
